--- a/flask_generator/requirements.txt
+++ b/flask_generator/requirements.txt
@@ -1,5 +1,5 @@
-Flask
+Flask>=2.0.0
 openai>=1.0.0
-requests
-cryptography
-python-dotenv 
+requests>=2.25.0
+cryptography>=3.4.0
+python-dotenv>=0.19.0 
