--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,5 @@ langchain-gigachat>=0.3.11
 langchain-core
 gigachat
 beautifulsoup4
-Flask
-openai
-requests
+django-widget-tweaks
 cryptography
-fastapi
