--- a/env.example
+++ b/env.example
@@ -1,56 +1,96 @@
-# Пример переменных окружения для Docker развертывания
-# Скопируйте в .env и заполните реальными значениями
+# =============================================================================
+# GHOSTWRITER - ПЕРЕМЕННЫЕ ОКРУЖЕНИЯ
+# =============================================================================
+# Скопируйте этот файл в .env и заполните реальными значениями
+# ВАЖНО: Не коммитьте .env в Git! Файл в .gitignore
 
 # =============================================================================
-# DJANGO НАСТРОЙКИ
+# DJANGO CORE
 # =============================================================================
 
-# Django Secret Key (генерируйте новый для продакшена)
-DJANGO_SECRET_KEY=your-super-secret-django-key-here
+# Django Secret Key (генерируйте новый: python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())')
+DJANGO_SECRET_KEY=your-super-secret-django-key-change-this-in-production
 
-# Разрешенные хосты (домены)
+# Разрешенные хосты (разделяйте запятыми без пробелов)
 ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com
 
+# Debug режим (ВАЖНО: False для production!)
+DEBUG=True
+
 # =============================================================================
-# БАЗА ДАННЫХ
+# БАЗА ДАННЫХ (PostgreSQL)
 # =============================================================================
 
-# PostgreSQL настройки
 DB_HOST=db
-DB_PASSWORD=your-secure-db-password
 DB_NAME=ghostwriter
 DB_USER=ghostwriter
+DB_PASSWORD=your-secure-db-password-change-this
+DB_PORT=5432
+
+# =============================================================================
+# REDIS (Кеширование)
+# =============================================================================
+
+REDIS_URL=redis://redis:6379/0
 
 # =============================================================================
 # AI API КЛЮЧИ
 # =============================================================================
 
 # GigaChat (российский AI) - для Django сервера
+# Получить: https://developers.sber.ru/portal/products/gigachat
 GIGACHAT_CLIENT_ID=your-gigachat-client-id
 GIGACHAT_CLIENT_SECRET=your-gigachat-client-secret
 
 # OpenAI API - для Flask микросервиса на зарубежном сервере
-OPENAI_API_KEY=your-openai-api-key
-
-# =============================================================================
-# ШИФРОВАНИЕ
-# =============================================================================
-
-# Ключ шифрования для связи Django-Flask (НЕ ИЗМЕНЯЙТЕ для совместимости)
-GENERATOR_ENCRYPTION_KEY=k6W1hS1TpK-fOe-1pEGSSXmSDHkQNrpsI-TfuL-7EHI=
+# Получить: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-api-key
 
 # =============================================================================
 # МИКРОСЕРВИСНАЯ АРХИТЕКТУРА
 # =============================================================================
 
-# URL Flask микросервиса (для продакшена - зарубежный сервер)
+# Ключ шифрования для связи Django-Flask
+# Генерировать: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+GENERATOR_ENCRYPTION_KEY=k6W1hS1TpK-fOe-1pEGSSXmSDHkQNrpsI-TfuL-7EHI=
+
+# URL Flask микросервиса
+# Для локальной разработки: http://flask:5000
+# Для продакшена: https://your-flask-server.com
+FLASK_GEN_URL=http://flask:5000
 FLASK_EXTERNAL_URL=https://your-flask-server.com
 
-# Redis URL (для кеширования)
-REDIS_URL=redis://redis:6379/0
+# =============================================================================
+# TELEGRAM БОТ
+# =============================================================================
+
+# Токен Telegram бота (получить у @BotFather: https://t.me/BotFather)
+TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz
+
+# URL для webhook (HTTPS обязателен в production!)
+# Формат: https://yourdomain.com/telegram/webhook/
+TELEGRAM_WEBHOOK_URL=https://yourdomain.com/telegram/webhook/
+
+# Секретный токен для верификации webhook запросов
+# Генерировать: openssl rand -hex 32
+TELEGRAM_WEBHOOK_SECRET=your-random-secret-token-min-32-characters
+
+# URL сайта для генерации ссылок с токенами
+# Для локальной разработки: http://localhost:8000
+# Для продакшена: https://yourdomain.com
+SITE_URL=http://localhost:8000
 
 # =============================================================================
-# ДОПОЛНИТЕЛЬНЫЕ НАСТРОЙКИ
+# API ИНТЕГРАЦИЯ (ДЛЯ БОТА)
+# =============================================================================
+
+# URL Django API (для бота)
+# В Docker Compose: http://django:8000
+# Standalone: http://localhost:8000
+DJANGO_API_URL=http://django:8000
+
+# =============================================================================
+# ДОПОЛНИТЕЛЬНЫЕ НАСТРОЙКИ AI
 # =============================================================================
 
 # OpenAI модели
@@ -60,3 +100,39 @@ DALLE_MODEL=dall-e-3
 # Таймауты и лимиты
 REQUEST_TIMEOUT=300
 MAX_REQUESTS=1000
+
+# =============================================================================
+# АВТОМАТИЗАЦИЯ (APScheduler)
+# =============================================================================
+
+# Количество дней после которых деактивированные токены будут удалены
+TOKEN_DELETE_AFTER_DAYS=90
+
+# Часовой пояс для планировщика задач
+TZ=Europe/Moscow
+
+# =============================================================================
+# PRODUCTION ONLY (Раскомментируйте для production)
+# =============================================================================
+
+# SSL сертификаты (для Let's Encrypt)
+# CERTBOT_EMAIL=your-email@example.com
+# DOMAIN_NAME=yourdomain.com
+
+# Настройки безопасности
+# SECURE_SSL_REDIRECT=True
+# SESSION_COOKIE_SECURE=True
+# CSRF_COOKIE_SECURE=True
+# SECURE_HSTS_SECONDS=31536000
+# SECURE_HSTS_INCLUDE_SUBDOMAINS=True
+# SECURE_HSTS_PRELOAD=True
+
+# =============================================================================
+# МОНИТОРИНГ И ЛОГИ (Опционально)
+# =============================================================================
+
+# Sentry DSN (для отслеживания ошибок)
+# SENTRY_DSN=https://your-sentry-dsn
+
+# Уровень логирования (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+LOG_LEVEL=INFO
