--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,41 @@
+# =============================================================================
+# ОСНОВНЫЕ ЗАВИСИМОСТИ GHOSTWRITER
+# =============================================================================
+# Установка: pip install -r requirements.txt
+
+# =============================================================================
+# DJANGO FRAMEWORK
+# =============================================================================
 Django>=4.2
-requests
-python-dotenv
+django-widget-tweaks>=1.4.0
+
+# =============================================================================
+# AI & ML БИБЛИОТЕКИ
+# =============================================================================
+# GigaChat (российский AI)
 langchain-gigachat>=0.3.11
-langchain-core
-gigachat
-beautifulsoup4
-django-widget-tweaks
-cryptography
+langchain-core>=0.3,<0.4
+gigachat>=0.1.0
+
+# =============================================================================
+# TELEGRAM BOT
+# =============================================================================
+python-telegram-bot==20.7
+
+# =============================================================================
+# HTTP & NETWORKING
+# =============================================================================
+requests>=2.31.0
+beautifulsoup4>=4.10.0
+
+# =============================================================================
+# УТИЛИТЫ
+# =============================================================================
+# Переменные окружения
+python-dotenv>=1.0.0
+
+# Шифрование (для Flask-Django связи)
+cryptography>=3.4.0
+
+# Автоматический планировщик задач
+APScheduler>=3.10.4
