--- a/.gitignore
+++ b/.gitignore
@@ -129,12 +129,17 @@ celerybeat.pid
 
 # Environments
 .env
+.env.local
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Developer tokens (SECURITY: Never commit!)
+.dev_token
+*_dev_token*
 
 # Spyder project settings
 .spyderproject
