--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,10 +1,10 @@
 # Docker Compose для продакшена
-# Django на российском сервере, Flask на зарубежном сервере
+# Django + Bot на российском сервере, Flask на зарубежном сервере
 
 version: '3.8'
 
 services:
-  # Django приложение (только для российского сервера)
+  # Django приложение (российский сервер)
   django:
     build: .
     container_name: ghostwriter-django-prod
@@ -15,27 +15,71 @@ services:
       - GIGACHAT_CLIENT_ID=${GIGACHAT_CLIENT_ID}
       - GIGACHAT_CLIENT_SECRET=${GIGACHAT_CLIENT_SECRET}
       - GENERATOR_ENCRYPTION_KEY=${GENERATOR_ENCRYPTION_KEY}
-      - FLASK_GEN_URL=${FLASK_EXTERNAL_URL}  # URL зарубежного Flask сервера
-      - DB_HOST=${DB_HOST}
+      - FLASK_GEN_URL=${FLASK_EXTERNAL_URL}
+      - DB_HOST=db
       - DB_PASSWORD=${DB_PASSWORD}
-      - REDIS_URL=${REDIS_URL}
+      - REDIS_URL=redis://redis:6379/0
       - SECRET_KEY=${DJANGO_SECRET_KEY}
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_WEBHOOK_URL=${TELEGRAM_WEBHOOK_URL}
+      - TELEGRAM_WEBHOOK_SECRET=${TELEGRAM_WEBHOOK_SECRET}
+      - SITE_URL=${SITE_URL}
     volumes:
       - /opt/ghostwriter/media:/app/media
+      - /opt/ghostwriter/staticfiles:/app/staticfiles
       - /opt/ghostwriter/logs:/app/logs
+    depends_on:
+      - db
+      - redis
+    networks:
+      - ghostwriter-network
+    restart: unless-stopped
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py collectstatic --noinput &&
+             gunicorn --bind 0.0.0.0:8000 --workers 4 --timeout 120 --max-requests 1000 ghostwriter.wsgi:application"
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 2G
+        reservations:
+          cpus: '1.0'
+          memory: 1G
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # Telegram Bot (российский сервер)
+  bot:
+    build:
+      context: .
+      dockerfile: Dockerfile.bot
+    container_name: ghostwriter-bot-prod
+    environment:
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_WEBHOOK_SECRET=${TELEGRAM_WEBHOOK_SECRET}
+      - DJANGO_API_URL=http://django:8000
+      - SITE_URL=${SITE_URL}
+    volumes:
+      - /opt/ghostwriter/logs:/app/logs
+    depends_on:
+      - django
     networks:
       - ghostwriter-network
     restart: unless-stopped
     deploy:
-      replicas: 2
       resources:
         limits:
-          cpus: '1.0'
-          memory: 1G
-        reservations:
           cpus: '0.5'
-          memory: 512M
+          memory: 256M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
 
   # PostgreSQL (российский сервер)
   db:
@@ -46,6 +90,7 @@ services:
       - POSTGRES_USER=ghostwriter
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_INITDB_ARGS=--locale=ru_RU.UTF-8
+      - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - /opt/ghostwriter/postgres:/var/lib/postgresql/data
       - /opt/ghostwriter/backups:/backups
@@ -55,19 +100,37 @@ services:
     deploy:
       resources:
         limits:
+          cpus: '1.0'
+          memory: 1G
+        reservations:
           cpus: '0.5'
           memory: 512M
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ghostwriter"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Redis (российский сервер)
   redis:
     image: redis:7-alpine
     container_name: ghostwriter-redis-prod
-    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
+    command: redis-server --appendonly yes --maxmemory 512mb --maxmemory-policy allkeys-lru
     volumes:
       - /opt/ghostwriter/redis:/data
     networks:
       - ghostwriter-network
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
 
   # Nginx (российский сервер)
   nginx:
@@ -80,12 +143,18 @@ services:
       - ./nginx.prod.conf:/etc/nginx/nginx.conf:ro
       - /opt/ghostwriter/ssl:/etc/nginx/ssl:ro
       - /opt/ghostwriter/media:/var/www/media:ro
-      - /opt/ghostwriter/static:/var/www/static:ro
+      - /opt/ghostwriter/staticfiles:/var/www/static:ro
+      - /opt/ghostwriter/logs/nginx:/var/log/nginx
     depends_on:
       - django
     networks:
       - ghostwriter-network
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
 
 networks:
   ghostwriter-network:
