--- a/flask_generator/requirements.txt
+++ b/flask_generator/requirements.txt
@@ -1,5 +1,23 @@
-Flask>=2.0.0
+# =============================================================================
+# ЗАВИСИМОСТИ FLASK МИКРОСЕРВИСА
+# =============================================================================
+# Flask микросервис для генерации через OpenAI (зарубежный сервер)
+# Установка: pip install -r requirements.txt
+
+# =============================================================================
+# FLASK FRAMEWORK
+# =============================================================================
+Flask>=2.3.0
+gunicorn>=20.1.0
+
+# =============================================================================
+# AI API
+# =============================================================================
 openai>=1.0.0
-requests>=2.25.0
+
+# =============================================================================
+# УТИЛИТЫ
+# =============================================================================
+requests>=2.31.0
 cryptography>=3.4.0
-python-dotenv>=0.19.0 
+python-dotenv>=1.0.0 
