--- a/env.example
+++ b/env.example
@@ -39,8 +39,17 @@ REDIS_URL=redis://redis:6379/0
 
 # GigaChat (российский AI) - для Django сервера
 # Получить: https://developers.sber.ru/portal/products/gigachat
-GIGACHAT_CLIENT_ID=your-gigachat-client-id
-GIGACHAT_CLIENT_SECRET=your-gigachat-client-secret
+# 
+# РЕКОМЕНДУЕМЫЙ СПОСОБ: Один Authorization Key
+# Скопируйте его из личного кабинета Sber и вставьте сюда:
+GIGACHAT_CREDENTIALS=your-authorization-key-from-sber-portal
+#
+# АЛЬТЕРНАТИВНЫЙ СПОСОБ: Client ID + Client Secret (для OAuth2)
+# GIGACHAT_CLIENT_ID=your-client-id
+# GIGACHAT_CLIENT_SECRET=your-client-secret
+#
+# Scope: GIGACHAT_API_PERS (физлицо) или GIGACHAT_API_CORP (юрлицо)
+GIGACHAT_SCOPE=GIGACHAT_API_PERS
 
 # OpenAI API - для Flask микросервиса на зарубежном сервере
 # Получить: https://platform.openai.com/api-keys
@@ -64,16 +73,8 @@ FLASK_EXTERNAL_URL=https://your-flask-server.com
 # TELEGRAM БОТ
 # =============================================================================
 
-# Токен основного Telegram бота (получить у @BotFather: https://t.me/BotFather)
-# Используется для автоматической выдачи токенов
+# Токен Telegram бота (получить у @BotFather: https://t.me/BotFather)
 TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz
-
-# Токен публичного Telegram бота (второй бот для публичного использования)
-# Показывает оферту и приглашает написать в личку
-TELEGRAM_BOT_TOKEN_PUBLIC=0987654321:ZYXwvuTSRqpONMLkjiHGFedcBA
-
-# Ваш Telegram username для связи с пользователями
-OWNER_TELEGRAM=@lavrovartem
 
 # URL для webhook (HTTPS обязателен в production!)
 # Формат: https://yourdomain.com/telegram/webhook/
